--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
         "sourceType": "module"
     },
     "rules": {
-        "no-unused-vars": "off",
-        "typescript-eslint/no-unused-vars": "off"
+        "no-unused-vars": "warn",
+        "quotes": "warn"
     }
 }
