--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "serve": "^14.2.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "utility-types": "^3.11.0"
   }
