--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/material": "^5.15.10",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.18",
+    "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "react": "^18.2.0",
@@ -16,6 +16,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^3.5.2"
   },
   "scripts": {
@@ -42,9 +43,13 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.8",
     "serve": "^14.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "utility-types": "^3.11.0"
+  },
+  "overrides": {
+    "typescript": "^5.3.3"
   }
 }
