--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
+    "react-to-print": "^2.15.1",
     "uuid": "^9.0.1",
     "web-vitals": "^3.5.2"
   },
