--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
     "react-to-print": "^2.15.1",
+    "usehooks-ts": "^2.15.1",
     "uuid": "^9.0.1",
     "web-vitals": "^3.5.2"
   },
