--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
+    "@types/react-dom": "^18.2.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
     "react-to-print": "^2.15.1",
-    "usehooks-ts": "^2.15.1",
+    "usehooks-ts": "^3.0.1",
     "uuid": "^9.0.1",
     "web-vitals": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "installdeps": "npm install"
   },
   "eslintConfig": {
     "extends": [
