--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/material": "^5.15.10",
     "@types/jest": "^29.5.12",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.22",
+    "axios": "^1.6.8",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
     "react-to-print": "^2.15.1",
@@ -25,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "installdeps": "npm install"
+    "installdeps": "npm install",
+    "serve": "npx serve -s build  -p 3001"
   },
   "eslintConfig": {
     "extends": [
