--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-REACT_APP_HOST_URL='https://akuma-stp-table.onrender.com'
+REACT_APP_HOST_URL='https://thingproxy.freeboard.io/'
 REACT_APP_TITLE='Стеклопакеты'
 
 
