--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "serveOnly": "npx serve -s build  -p 3001",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "installdeps": "npm install",
-    "serve": "npx serve -s build  -p 3001"
+    "buildAndServe": "react-scripts build & npx serve -s build  -p 3001"
   },
   "eslintConfig": {
     "extends": [
