--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@types/react-dom": "^18.2.22",
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
+    "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-query": "^3.39.3",
+    "react-query": "^4.0.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
     "react-to-print": "^2.15.1",
