--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-query": "^1.2.9",
     "@types/uuid": "^9.0.8",
     "serve": "^14.2.1",
     "tailwindcss": "^3.4.1",
