--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-query": "^4.0.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
     "react-to-print": "^2.15.1",
@@ -54,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-query": "^1.2.9",
     "@types/uuid": "^9.0.8",
     "serve": "^14.2.1",
     "tailwindcss": "^3.4.1",
