--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
     "react-to-print": "^2.15.1",
+    "react-toastify": "^10.0.5",
     "usehooks-ts": "^3.0.1",
     "uuid": "^9.0.1",
     "web-vitals": "^3.5.2"
