--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/material": "^5.15.10",
+    "@tanstack/react-query": "^5.28.8",
+    "@tanstack/react-query-devtools": "^5.28.8",
     "@types/jest": "^29.5.12",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.11.19",
@@ -19,7 +21,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
     "react-to-print": "^2.15.1",
@@ -34,7 +35,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "installdeps": "npm install",
-    "buildAndServe": "react-scripts build & npx serve -s build  -p 3001"
+    "buildAndServe": "npm run build & npx serve -s build  -p 3001"
   },
   "eslintConfig": {
     "extends": [
