mrt table started

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 REACT_APP_HOST_URL='http://localhost:3000'
+REACT_APP_API_URL='https://akuma-stp-table.onrender.com'
 REACT_APP_TITLE='IN DEVELOPMENT'
 
