--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.8",
-    "@mui/material": "^5.15.10",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@mui/x-date-pickers": "^7.1.0",
     "@tanstack/react-query": "^5.28.8",
     "@tanstack/react-query-devtools": "^5.28.8",
     "@types/jest": "^29.5.12",
@@ -16,6 +18,7 @@
     "@types/react-dom": "^18.2.22",
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
+    "material-react-table": "^2.12.1",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.6",
     "react": "^18.2.0",
@@ -31,11 +34,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "serveOnly": "npx serve -s build  -p 3001",
+    "serveOnly": "npx serve -s build  -p 3001 --cors",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "installdeps": "npm install",
-    "buildAndServe": "npm run build & npx serve -s build  -p 3001"
+    "buildAndServe": "npm run build & npx serve -s build  -p 3001 -C"
   },
   "eslintConfig": {
     "extends": [
@@ -66,5 +69,5 @@
   "overrides": {
     "typescript": "^5.3.3"
   },
-  "homepage": "/tabs"
+  "homepage": "/"
 }
