--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "installdeps": "npm install",
-    "buildAndServe": "npm run build & npx serve -s build  -p 3001 -C"
+    "buildAndServe": "npm run build & npx serve -s build  -p 3001 --cors"
   },
   "eslintConfig": {
     "extends": [
