--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "start": "react-scripts start",
     "serveOnly": "npx serve -s build  -p 3001 --cors",
-    "build": "react-scripts --max_old_space_size=4096  build",
+    "build": "react-scripts  build",
     "eject": "react-scripts eject",
     "installdeps": "npm install --legacy-peer-deps",
     "buildAndServe": "npm run build & npx serve -s build  -p 3001 --cors"
